* Fixed middle alignment for header text in all OS, buttons need revision

--- a/ProjectSyri/styles/main.css
+++ b/ProjectSyri/styles/main.css
@@ -42,18 +42,23 @@ h1{
 }
 
 /* STYLE OF THE HEADER FOR THE LAYOUTS */
-.header{
-    background-color:rgb(88,220,145);
-    font-family:VacAppFont;
-    font-size:180%;
-    color:rgb(255,255,255);
+.header-wrapper{
+    display:table;
+    width:100%;
     height:10%;
-    display:inline-block;
-    position:relative;
+    background-color:rgb(88,220,145);
 }
 
-.header-text{
-    padding-top:2.5%;
+.header{
+    font-family:VacAppFont;
+    font-size:180%;
+    display:table-cell;
+    text-align:center;
+    vertical-align:middle;
+}
+
+.header-content{
+    color:rgb(255,255,255);
 }
 
 .footer{
@@ -72,7 +77,6 @@ h1{
     background-color:transparent!important;
     color:rgb(255,255,255)!important;
     border:none;
-    font-size:80%;
     position:absolute;
     top:2%;
     left:-3%;
